--- a/view/frontend/web/template/payment/twint.html
+++ b/view/frontend/web/template/payment/twint.html
@@ -1,11 +1,15 @@
 <div class="payment-method" data-bind="css: {'_active': (getCode() == isChecked())}">
     <div class="payment-method-title field choice">
         <input type="radio"
-        name="payment[method]"
-        class="radio"
-        data-bind="attr: {'id': getCode()}, value: getCode(), checked: isChecked, click: selectPaymentMethod, visible: isRadioButtonVisible()"/>
-            <label data-bind="attr: {'for': getCode()}" class="label"><span data-bind="text: getTitle()"></span></label>
-
+               name="payment[method]"
+               class="radio"
+               data-bind="attr: {'id': getCode()}, value: getCode(), checked: isChecked, click: selectPaymentMethod, visible: isRadioButtonVisible()" />
+        <label data-bind="attr: {'for': getCode()}" class="label">
+            <!-- Twint Logo -->
+            <img data-bind="attr: {src: getLogoUrl()}" class="payment-icon" alt="TWINT"/>
+            <!-- Twint Logo -->
+            <span data-bind="text: getInstruction()"></span>
+        </label>
     </div>
     <div class="payment-method-content">
         <!-- ko foreach: getRegion('messages') -->
@@ -22,19 +26,20 @@
             <!--/ko-->
         </div>
         <div class="actions-toolbar">
-            <div class="primary">
-                <button class="action primary checkout"
-                     type="submit"
-                     data-bind="
-                     click: placeOrder,
+            <button class="twint-button" type="submit"
+                    data-bind="
+                     click: showModal,
                      attr: {title: $t('Place Order')},
                      css: {disabled: !isPlaceOrderActionAllowed()},
                      enable: (getCode() == isChecked())
                      "
-                     disabled>
-                     <span data-bind="i18n: 'Place Order'"></span>
-                 </button>
-            </div>
-         </div>
+                    disabled
+                    >
+                <span class="twint-button_icon_block">
+                    <img class="twint-button_icon" data-bind="attr: {src: getExpressUrl()}" alt="TWINT Checkout">
+                </span>
+                <span class="twint-button_label" data-bind="i18n: 'TWINT Checkout'"></span>
+            </button>
+        </div>
     </div>
 </div>
