--- a/view/frontend/web/css/tailwind/input.css
+++ b/view/frontend/web/css/tailwind/input.css
@@ -1,7 +1,7 @@
 @import './../modal.css';
 @import './../button.css';
 
-@tailwind base;
-@tailwind components;
+/*@tailwind base;*/
+/*@tailwind components;*/
 @tailwind utilities;
 
