fix modal close button

--- a/view/frontend/web/template/modal/qr-modal-popup.html
+++ b/view/frontend/web/template/modal/qr-modal-popup.html
@@ -12,7 +12,7 @@
          data-role="focusable-scope">
         <header class="twint-modal-header flex justify-between items-center">
             <button id="twint-close"
-                class="ml-6 bg-gray-100"
+                class="bg-gray-100"
                 data-role="closeBtn"
                 type="button">
                 <svg width="14" height="13" viewBox="0 0 14 13" fill="none" xmlns="http://www.w3.org/2000/svg">
