--- a/view/frontend/templates/qr.phtml
+++ b/view/frontend/templates/qr.phtml
@@ -11,7 +11,7 @@
                     <button id="btn-copy-token"
                             data-clipboard-action="copy"
                             data-clipboard-target="#qr-token"
-                            class="p-4 px-6 bg-white rounded-lg border-black hover:shadow-none hover:border-inherit hover:text-inherit"
+                            class="p-4 px-6 !bg-white rounded-lg border-black hover:shadow-none hover:border-inherit hover:text-inherit"
                     ><?php echo __("Copy code"); ?></button>
                 </div>
 
