--- a/view/adminhtml/templates/request/view.phtml
+++ b/view/adminhtml/templates/request/view.phtml
@@ -1,6 +1,50 @@
-<div id="log-modal" data-bind="scope: 'log-modal'">
-    <!-- ko template: getTemplate() --><!-- /ko -->
+<?php
+/** @var View $block */
+
+use Twint\Magento\Block\Adminhtml\Request\View;
+
+$request = $block->getEntity();
+$invocations = $block->getInvocations();
+
+?>
+<style>
+    .field-block{
+        margin-bottom: 20px;
+        /* box-shadow: 10px 10px 5px 0px #aaa6a0; */
+        border: 1px solid #dddddd;
+        padding: 8px;
+        border-radius: 5px;
+        background-color: #f6f6f6;
+    }
+    .full-width{
+        width:100%;
+    }
+</style>
+<div class="request-view">
+    <div class="field-block">
+        <label for="method"><b><?php echo __("API method"); ?></b></label>
+        <div id="method" name="method" class="full-width"><?php echo htmlspecialchars($request->getMethod()); ?></div>
+    </div>
+
+    <div class="field-block">
+        <label for="request"><b><?php echo __("Request"); ?></b></label>
+        <textarea id="request" name="request" class="full-width" rows="4"><?php echo htmlspecialchars($request->getRequest()); ?></textarea>
+    </div>
+
+    <div class="field-block">
+        <label for="response"><b><?php echo __("Response"); ?></b></label>
+        <textarea id="response" name="response" class="full-width" rows="4"><?php echo htmlspecialchars($request->getResponse()); ?></textarea>
+    </div>
+
+        <?php foreach ($invocations as $invocation) { ?>
+        <div class="field-block">
+            <h3><?php echo $invocation['action'] ?></h3>
+            <label><b><?php echo __("Request"); ?></b></label>
+            <textarea class="full-width" rows="4"><?php echo htmlspecialchars($invocation['req']); ?></textarea>
+
+            <label><b><?php echo __("Response"); ?></b></label>
+            <textarea class="full-width" rows="4"><?php echo htmlspecialchars($invocation['res']); ?></textarea>
+        </div>
+
+        <?php } ?>
 </div>
-<script>
-  requirejs(["twintLogModal"], function($){});
-</script>
