--- a/view/frontend/layout/default.xml
+++ b/view/frontend/layout/default.xml
@@ -1,10 +1,18 @@
 <page xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:noNamespaceSchemaLocation="urn:magento:module:View/Layout:etc/page_configuration.xsd">
     <head>
         <css src="Twint_Magento::css/tailwind/twint.css"/>
+        <script src="Twint_Magento::js/twint.js"/>
     </head>
     <body>
         <referenceContainer name="main">
             <block class="Twint\Magento\Block\Frontend\ScanQrModal" name="twint-qr-modal" template="qr.phtml" />
         </referenceContainer>
+
+        <referenceBlock name="minicart.addons">
+            <block class="Twint\Magento\Block\Frontend\Express\Screen\Flyout\Button"
+                   name="custom.button"
+                   template="Twint_Magento::express/button.phtml"
+                   after="minicart.proceed.to.checkout"/>
+        </referenceBlock>
     </body>
 </page>
