--- a/view/frontend/templates/qr.phtml
+++ b/view/frontend/templates/qr.phtml
@@ -41,9 +41,9 @@
 
     <div class="container mx-auto mt-4 text-16">
         <div class="grid grid-cols-1 sm:grid-cols-2 gap-4">
-            <div class="flex flex-col items-center p-4">
+            <div id="twint-guide-app" class="hidden flex flex-col items-center p-4">
                 <div class="flex justify-center">
-                    <img class="w-55 h-55" src="<?= $block->getViewFileUrl('Twint_Magento/images/icons/icon-twint.svg') ?>" alt="scan">
+                    <img class="w-55 h-55" src="<?= $block->getViewFileUrl('Twint_Magento/images/icons/icon-twint.svg') ?>" alt="app">
                 </div>
                 <div class="text-center mt-4"><?php echo __("Open your bank's TWINT app on your smartphone.") ?></div>
             </div>
@@ -53,9 +53,9 @@
                 </div>
                 <div class="text-center mt-4"><?php echo __("Scan this QR Code with your TWINT app to complete the checkout.") ?></div>
             </div>
-            <div class="hidden flex flex-col items-center p-4">
+            <div id="twint-guide-contact" class="hidden flex flex-col items-center p-4">
                 <div class="flex justify-center">
-                    <img class="w-55 h-55" src="<?= $block->getViewFileUrl('Twint_Magento/images/icons/icon-contact.svg') ?>" alt="scan">
+                    <img class="w-55 h-55" src="<?= $block->getViewFileUrl('Twint_Magento/images/icons/icon-contact.svg') ?>" alt="contact">
                 </div>
                 <div class="text-center mt-4"><?php echo __("Select a shipping address and complete the purchase in the app.") ?></div>
             </div>
