--- a/view/frontend/templates/qr.phtml
+++ b/view/frontend/templates/qr.phtml
@@ -8,7 +8,7 @@
                 </div>
 
                 <div class="md:hidden text-center my-6">
-                    <button id="btn-copy-token"
+                    <button id="twint-copy"
                             data-clipboard-action="copy"
                             data-clipboard-target="#qr-token"
                             class="p-4 px-6 !bg-white rounded-lg border-black hover:shadow-none hover:border-inherit hover:text-inherit"
