--- a/view/frontend/templates/express/button.phtml
+++ b/view/frontend/templates/express/button.phtml
@@ -1,7 +1,6 @@
-<button class="twint-button" data-mage-init='{"twint":{}}'>
-        <span class="twint-button_icon_block">
-            <img class="twint-button_icon" src="<?= $block->getViewFileUrl('Twint_Magento/images/express.svg') ?>" alt="Express Checkout">
+<button class="twint-button w-full" data-mage-init='{"Twint_Magento/js/twint":{}}'>
+        <span class="icon-block">
+            <img class="twint-icon" src="<?= $block->getViewFileUrl('Twint_Magento/images/express.svg') ?>" alt="Express Checkout">
         </span>
-    <span class="twint-button_label"><?php echo __("TWINT express checkout"); ?></span>
-
+    <span class="twint-label"><?php echo __("TWINT express checkout"); ?></span>
 </button>
