Update transaction ID and remove redundant files

--- a/view/frontend/web/css/source/modal.scss
+++ b/view/frontend/web/css/source/modal.scss
@@ -1,9 +1,17 @@
-.modal-inner-wrap.twint {
-  background-color: rgb(243 244 246);
-  padding: 0 !important;
-}
-
 .twint {
+  &.modal-inner-wrap {
+    background-color: rgb(243 244 246);
+    padding: 0 !important;
+
+    @media (min-width: 1024px) {
+      & {
+        margin-left: -400px;
+        width: 800px;
+        left: 50%;
+      }
+    }
+  }
+
   header {
     padding-left: 0 !important;
     padding-right: 0 !important;
@@ -78,13 +86,5 @@
     background-position: right 1rem center;
     background-size: 1em;
     text-align-last: center;
-  }
-}
-
-@media (min-width: 1024px) {
-  .modal-inner-wrap.twint {
-    margin-left: -400px;
-    width: 800px;
-    left: 50%;
   }
 }
