--- a/view/frontend/templates/express/button-flyout.phtml
+++ b/view/frontend/templates/express/button-flyout.phtml
@@ -1,4 +1,4 @@
-<button class="twint-button" data-mage-init='{"twint":{}}'>
+<button class="twint-button whole-cart">
         <span class="icon-block">
             <img class="twint-icon" src="<?= $block->getViewFileUrl('Twint_Magento/images/express.svg') ?>" alt="Express Checkout">
         </span>
