--- a/view/frontend/templates/qr.phtml
+++ b/view/frontend/templates/qr.phtml
@@ -63,3 +63,11 @@
     </div>
 </div>
 
+<script type="text/x-magento-init">
+    {
+        "body": {
+            "Twint_Magento/js/twint": {}
+        }
+    }
+</script>
+
