add Express button into PDP page and handle events

--- a/view/frontend/templates/express/button.phtml
+++ b/view/frontend/templates/express/button.phtml
@@ -1,4 +1,4 @@
-<button class="twint-button w-full">
+<button type="submit" disabled class="twint-button w-full my-2">
     <span class="icon-block">
         <img class="twint-icon" src="<?= $block->getViewFileUrl('Twint_Magento/images/express.svg') ?>" alt="Express Checkout">
     </span>
