--- a/view/frontend/templates/express/button-in-box.phtml
+++ b/view/frontend/templates/express/button-in-box.phtml
@@ -1,4 +1,4 @@
-<button class="twint-button whole-cart">
+<button class="twint-button whole-cart w-full box">
         <span class="icon-block">
             <img class="twint-icon" src="<?= $block->getViewFileUrl('Twint_Magento/images/express.svg') ?>" alt="Express Checkout">
         </span>
