--- a/view/frontend/templates/express/button-cart.phtml
+++ b/view/frontend/templates/express/button-cart.phtml
@@ -1,6 +1,6 @@
 <button class="twint-button whole-cart w-full">
-        <span class="icon-block">
-            <img class="twint-icon" src="<?= $block->getViewFileUrl('Twint_Magento/images/express.svg') ?>" alt="Express Checkout">
-        </span>
-    <span class="twint-label"><?php echo __("TWINT express checkout"); ?></span>
+    <span class="icon-block">
+        <img class="twint-icon" src="<?= $block->getViewFileUrl('Twint_Magento/images/express.svg') ?>" alt="Express Checkout">
+    </span>
+    <span class="twint-label"><?php echo __("TWINT Express Checkout"); ?></span>
 </button>
