--- a/view/frontend/templates/express/button-cart.phtml
+++ b/view/frontend/templates/express/button-cart.phtml
@@ -2,5 +2,5 @@
     <span class="icon-block">
         <img class="twint-icon" src="<?= $block->getViewFileUrl('Twint_Magento/images/express.svg') ?>" alt="Express Checkout">
     </span>
-    <span class="twint-label"><?php echo __("TWINT Express Checkout"); ?></span>
+    <span class="twint-label"><?php echo __("Express Checkout"); ?></span>
 </button>
