--- a/view/frontend/templates/express/button-cart.phtml
+++ b/view/frontend/templates/express/button-cart.phtml
@@ -1,4 +1,4 @@
-<button class="twint-button whole-cart w-full">
+<button class="twint-button express w-full">
     <span class="icon-block">
         <img class="twint-icon" src="<?= $block->getViewFileUrl('Twint_Magento/images/express.svg') ?>" alt="Express Checkout">
     </span>
