--- a/view/frontend/templates/express/button-minicart.phtml
+++ b/view/frontend/templates/express/button-minicart.phtml
@@ -1,4 +1,4 @@
-<button type="submit" disabled class="twint-button express w-full my-2">
+<button class="twint-button express mt-4 w-full">
     <span class="icon-block">
         <img class="twint-icon" src="<?= $block->getViewFileUrl('Twint_Magento/images/express.svg') ?>" alt="Express Checkout">
     </span>
