Trigger handle express checkout for buttons

--- a/view/frontend/templates/express/button.phtml
+++ b/view/frontend/templates/express/button.phtml
@@ -1,3 +1,5 @@
+<?php /** @var \Twint\Magento\Block\Frontend\Express\Button $block */  ?>
+
 <button type="submit" disabled class="twint-button express w-full my-2">
     <span class="icon-block">
         <img class="twint-icon" src="<?= $block->getViewFileUrl('Twint_Magento/images/express.svg') ?>" alt="Express Checkout">
