--- a/view/frontend/templates/express/button-minicart.phtml
+++ b/view/frontend/templates/express/button-minicart.phtml
@@ -1,4 +1,7 @@
-<button class="twint-button express mt-4 w-full">
+<?php /** @var \Twint\Magento\Block\Frontend\Express\Button $block */  ?>
+
+<button disabled class="twint-button express cart mini mt-4 w-full"
+        data-mage-init='{"Twint_Magento/js/express/cart-checkout":{}}'>
     <span class="icon-block">
         <img class="twint-icon" src="<?= $block->getViewFileUrl('Twint_Magento/images/express.svg') ?>" alt="Express Checkout">
     </span>
