--- a/view/frontend/web/template/payment/twint.html
+++ b/view/frontend/web/template/payment/twint.html
@@ -39,7 +39,7 @@
                     <span class="icon-block">
                         <img class="twint-icon" data-bind="attr: {src: getExpressUrl()}" alt="TWINT Checkout">
                     </span>
-                    <span class="twint-label" data-bind="i18n: 'TWINT Checkout'"></span>
+                    <span class="twint-label" data-bind="i18n: 'Checkout'"></span>
                 </button>
             </div>
         </div>
