Add express button into product list widget

--- a/view/frontend/templates/express/button-cart.phtml
+++ b/view/frontend/templates/express/button-cart.phtml
@@ -1,4 +1,6 @@
-<?php /** @var \Twint\Magento\Block\Frontend\Express\Button $block */  ?>
+<?php /** @var Button $block */
+
+use Twint\Magento\Block\Frontend\Express\Button; ?>
 
 <button disabled class="twint-button express w-full" data-mage-init='{"Twint_Magento/js/express/cart-checkout":{}}'>
     <span class="icon-block">
