--- a/view/frontend/templates/express/button-in-box.phtml
+++ b/view/frontend/templates/express/button-in-box.phtml
@@ -1,3 +1,6 @@
+<?php /** @var Button $block */
+
+use Twint\Magento\Block\Frontend\Express\Button; ?>
 <button disabled class="twint-button express w-full box">
     <span class="icon-block">
         <img class="twint-icon" src="<?= $block->getViewFileUrl('Twint_Magento/images/express.svg') ?>" alt="Express Checkout">
