--- a/view/frontend/templates/express/button.phtml
+++ b/view/frontend/templates/express/button.phtml
@@ -1,4 +1,6 @@
-<?php /** @var \Twint\Magento\Block\Frontend\Express\Button $block */  ?>
+<?php /** @var Button $block */
+
+use Twint\Magento\Block\Frontend\Express\Button; ?>
 
 <button type="submit" disabled class="twint-button express w-full my-2">
     <span class="icon-block">
