--- a/view/frontend/templates/express/button-minicart.phtml
+++ b/view/frontend/templates/express/button-minicart.phtml
@@ -1,4 +1,6 @@
-<?php /** @var \Twint\Magento\Block\Frontend\Express\Button $block */  ?>
+<?php /** @var Button $block */
+
+use Twint\Magento\Block\Frontend\Express\Button; ?>
 
 <button disabled class="twint-button express cart mini mt-4 w-full"
         data-mage-init='{"Twint_Magento/js/express/cart-checkout":{}}'>
