--- a/view/frontend/templates/express/button-cart.phtml
+++ b/view/frontend/templates/express/button-cart.phtml
@@ -2,7 +2,7 @@
 
 use Twint\Magento\Block\Frontend\Express\Button; ?>
 
-<button disabled class="twint-button express w-full" data-mage-init='{"Twint_Magento/js/express/cart-checkout":{}}'>
+<button disabled class="twint-button express" data-mage-init='{"Twint_Magento/js/express/cart-checkout":{}}'>
     <span class="icon-block">
         <img class="twint-icon" src="<?= $block->getViewFileUrl('Twint_Magento/images/express.svg') ?>" alt="Express Checkout">
     </span>
