--- a/view/frontend/templates/express/button-in-box.phtml
+++ b/view/frontend/templates/express/button-in-box.phtml
@@ -1,7 +1,7 @@
 <?php /** @var Button $block */
 
 use Twint\Magento\Block\Frontend\Express\Button; ?>
-<button disabled class="twint-button express w-full box">
+<button disabled class="twint-button express box">
     <span class="icon-block">
         <img class="twint-icon" src="<?= $block->getViewFileUrl('Twint_Magento/images/express.svg') ?>" alt="Express Checkout">
     </span>
