--- a/view/frontend/templates/express/button-minicart.phtml
+++ b/view/frontend/templates/express/button-minicart.phtml
@@ -2,7 +2,7 @@
 
 use Twint\Magento\Block\Frontend\Express\Button; ?>
 
-<button disabled class="twint-button express cart mini mt-4 w-full"
+<button disabled class="twint-button express cart mini mt-4"
         data-mage-init='{"Twint_Magento/js/express/cart-checkout":{}}'>
     <span class="icon-block">
         <img class="twint-icon" src="<?= $block->getViewFileUrl('Twint_Magento/images/express.svg') ?>" alt="Express Checkout">
