--- a/view/frontend/web/css/source/button.scss
+++ b/view/frontend/web/css/source/button.scss
@@ -1,5 +1,6 @@
 .twint-button {
-  min-width: 150px;
+  width: max-content;
+  min-width: 100%;
   display: flex !important;
   align-items: center;
   justify-content: center;
