--- a/view/adminhtml/templates/two_grids.phtml
+++ b/view/adminhtml/templates/two_grids.phtml
@@ -1,7 +1,10 @@
 <?php
+/** @var TwoGridsBlock $block */
 
-echo "<h2>" .__("Refund history") ."</h2>";
+use Twint\Magento\Block\Adminhtml\Order\TwoGridsBlock;
+
+echo "<h2>" .__("Reversal history") ."</h2>";
 echo $block->getChildHtml('refund_history_grid');
 
-echo "<h2>" .__("Transaction history") ."</h2>";
+echo "<h2>" .__("Transaction logs") ."</h2>";
 echo $block->getChildHtml('pairing_grid');
